--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "FileSharing RestuAP",
+  "name": "FileSharing MIMIN CANTIK",
   "description": "BOT Multi Force Subs File Sharing Bot berguna untuk menyimpan file dan dapat diakses melalui link khusus",
   "keywords": [
     "telegram",
